--- a/TestApplication/mysql-deployment.yaml
+++ b/TestApplication/mysql-deployment.yaml
@@ -33,6 +33,8 @@ spec:
               value: root
           ports:
             - containerPort: 3306
+      imagePullSecrets:
+        - name: regcred
 ---
 apiVersion: v1
 kind: Service
